src/objects/C501_Contact_Cache__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>MailingCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>MailingPostalCode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>MailingStreet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <label>OtherCity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <label>OtherCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <label>OtherPostalCode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <label>OtherState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <label>OtherStreet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outlook Cache</fullName>
                </value>
                <value>
                    <fullName>Outlook Contact</fullName>
                </value>
                <value>
                    <fullName>Outlook Contact Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Unassigned&quot;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Cache</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Outlook Cache</value>
        </filters>
        <filters>
            <field>FirstName__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Merge_Pending</fullName>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <columns>Type__c</columns>
        <columns>Source__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <columns>Company__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Outlook Contact Change</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <label>My Pending Actions</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Contact Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>